feat: set valid user name and password

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <form action="iniciar.html">
 
             <p>Iniciar sessão</p> <br>
-            
+            <!-- TODO: remover user e senha iniciais. Coloquei aqui só pro professor testar-->
             <i id="campo_login1" class="fa-solid fa-user"> <span class="campo_texto">Username</span></i>
-            <input id="username" class="form_campo" type="text"> <br>
+            <input id="username" class="form_campo" type="text" value="Pietra"> <br>
 
             <i id="campo_login2" class="fa-solid fa-lock"> <span class="campo_texto">Senha</span></i>
-            <input id="password" class="form_campo" type="password"> <br>
+            <input id="password" class="form_campo" type="password" value="123456"> <br>
 
             <button type="submit" class="login"><span class="login_texto">Entrar</span></button>
 
