--- a/partida.html
+++ b/partida.html
@@ -2,7 +2,7 @@
 
 <html lang="PT-br">
 
-<!-- image crediti <a href="https://www.flaticon.com/free-icons/hourglass" title="hourglass icons">Hourglass icons created by Freepik - Flaticon</a>   -->
+<!-- image credit <a href="https://www.flaticon.com/free-icons/hourglass" title="hourglass icons">Hourglass icons created by Freepik - Flaticon</a>   -->
 
 <head>
   <meta charset="UTF-8">
@@ -89,8 +89,13 @@
         </div>
 
         <div class="iniciar-options" id="playAgain" style="display: none;">
-          <img src="imagens/replay.png" alt="Imagem trofeu">
-          <p class="icon-text" >Novo jogo</p>
+          <img src="imagens/replay.png" alt="replay">
+          <p class="icon-text" >Jogar Novamente</p>
+        </div>
+
+        <div class="iniciar-options" id="configNewGame" style="display: none;">
+          <img src="imagens/configNewGame.png" alt="novo jogo">
+          <p class="icon-text" >Criar novo jogo</p>
         </div>
  
     </div>
