--- a/partida.html
+++ b/partida.html
@@ -2,9 +2,11 @@
 
 <html lang="PT-br">
 
+<!-- image credit <a href="https://www.flaticon.com/free-icons/hourglass" title="hourglass icons">Hourglass icons created by Freepik - Flaticon</a>   -->
+
 <head>
   <meta charset="UTF-8">
-  <title>Iniciar jogo</title>
+  <title>Campo Minado</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -12,11 +14,8 @@
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="estilo/partida.css">
   <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
-  <script>
-    function goBack() {
-      window.location.href = 'index.html';
-    }
-  </script>
+  <script type="module" src="/src/partida.js"></script>
+
 </head>
 
 <body>
@@ -25,7 +24,7 @@
       <img class="logo-user" src="imagens/perfil.png" alt="Imagem perfil">
       <span class="perfil_texto">Olá, {username}</span>
     </div>
-    <p onclick="goBack()" class="exit">Sair</p>
+    <p class="exit">Sair</p>
   </header>
 
   <div class="title-image">
@@ -43,7 +42,7 @@
 
       <a href="historico.html">
         <div class="iniciar-options">
-          <img src="imagens/historico.png" alt="Imagem trofeu">
+          <img src="imagens/historico.png" alt="Imagem historico">
           <p class="icon-text">Histórico</p>
         </div>
       </a>
@@ -53,30 +52,56 @@
 
       <div class="game-settings-container">
 
-          <div class="board-title">
-            <p>Modo: clássico</p>
-            <p>Número de bombas: 5</p>
-            <p>Dimensão: 5</p>
-            <p>Tempo: XX:XX</p>
-          </div>
+        <div class="board-title">
+          <p id="game-mode">Modo: clássico</p>
+          <p id="number-mines">Número de bombas: 5</p>
+          <p id="dimension">Dimensão: 5</p>
+          <p id="timer">Tempo: 00:00</p>
+        </div>
 
-          <img class="board-img" src="imagens/campominado.png" alt="Imagem campo">
+        <div class="board"></div>
+        <!-- <img class="board-img" src="imagens/campominado.png" alt="Imagem campo"> -->
 
       </div>
 
       <div class="partida-footer">
-        <div class="spy">
+        <div class="spy-button">
           <i class="fa-solid fa-eye-slash"></i>
           <p>Trapaça</p>
         </div>
-        <p class="exit">Abandonar partida</p>
+
+        <p class="leave-game">Abandonar partida</p>
+
       </div>
 
     </div>
 
+    <div class="options-ranking-history">
+    
+        <div class="iniciar-options">
+          <img src="imagens/mineFlag.png" alt="Bombas marcadas">
+          <p class="icon-text" id="gameFlags"></p>
+        </div>
 
+        <div class="iniciar-options" id="timer-rivotril-div" style="display: none;">
+          <img src="imagens/ampulheta.png" alt="tempo rivotril">
+          <p class="icon-text" id="timer-rivotril"></p>
+        </div>
+
+        <div class="iniciar-options" id="playAgain" style="display: none;">
+          <img src="imagens/replay.png" alt="replay">
+          <p class="icon-text" >Jogar Novamente</p>
+        </div>
+
+        <div class="iniciar-options" id="configNewGame" style="display: none;">
+          <img src="imagens/configNewGame.png" alt="novo jogo">
+          <p class="icon-text" >Criar novo jogo</p>
+        </div>
+ 
+    </div>
 
   </div>
+
 
 </body>
 
