--- a/partida.html
+++ b/partida.html
@@ -13,6 +13,8 @@
     href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="estilo/partida.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
   <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
   <script type="module" src="/src/partida.js"></script>
 
