Correção dos IDs duplicados nos campos de senha

--- a/alterarsenha.html
+++ b/alterarsenha.html
@@ -19,12 +19,12 @@
         <div class="section">
             <p class="subtitulo">Nova Senha</p>
             <div class="input-container">
-                <input id="password" class="form_campo" type="password" placeholder="Digite sua nova senha">
+                <input id="new_password" class="form_campo" type="password" placeholder="Digite sua nova senha">
                 <img class="eye-icon togglePassword" src="imagens/verSenha.png" alt="Ver senha">
             </div><br>
             <p class="subtitulo">Confirmar Senha</p>
             <div class="input-container">
-                <input id="password" class="form_campo" type="password" placeholder="Repita sua nova senha">
+                <input id="confirm_password" class="form_campo" type="password" placeholder="Repita sua nova senha">
                 <img class="eye-icon togglePassword" src="imagens/verSenha.png" alt="Ver senha" >
             </div>
             
