--- a/ranking.html
+++ b/ranking.html
@@ -29,7 +29,7 @@
 
         <button type="button" class="iniciar" onclick="goBack()"><span class="iniciar-text">Voltar</span></button>
 
-        <script src="./src/ranking.js"></script>
+        <script type="module" src="./src/ranking.js"></script>
     </body>
 
 </html>
