password type on meus dados

--- a/meusdados.html
+++ b/meusdados.html
@@ -56,7 +56,7 @@
 
       <div class="campo_lapis">
         <i class="fa-solid fa-lock" > <span class="campo_texto"> Senha</span></i>
-        <input class="form_campo" id="senha" type="text" disabled>
+        <input class="form_campo" id="senha" type="password" disabled>
         <i class="fa-solid fa-pen-to-square lapis"></i>
         <br>
       </div>
