--- a/partida.html
+++ b/partida.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
   <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
-  <script type="module" src="/src/partida.js"></script>
+  <script type="module" src="src/partida.js"></script>
 
 </head>
 
