add sweet alert and validations corrigidas

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,12 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Road+Rage&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="estilo/cadastro.css">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.3/dist/sweetalert2.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.3/dist/sweetalert2.all.min.js"></script>
     
   </head>
 
   <body>
 
-    <form class="form_cadastro" action="iniciar.html" method="get">
+    <form class="form_cadastro" action="index.html" method="get">
 
       <p>Cadastre-se</p>
 
@@ -51,7 +53,7 @@
       <div>
         <i class="fa-solid fa-lock"> <span class="campo_texto"> Senha</span></i>
         <div class="input-container">
-          <input id="password" class="form_campo" type="password">
+          <input id="senha" class="form_campo" type="password">
           <img class="eye-icon togglePassword" src="imagens/verSenha.png" alt="Ver senha">
         </div><br>
       </div>
