--- a/meusdados.html
+++ b/meusdados.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="estilo/meusdados.css">
     <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.3/dist/sweetalert2.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.3/dist/sweetalert2.all.min.js"></script>
   </head>
 
   <body>
@@ -56,7 +58,7 @@
 
       <div class="campo_lapis">
         <i class="fa-solid fa-lock" > <span class="campo_texto"> Senha</span></i>
-        <input class="form_campo" id="senha" type="password" disabled>
+        <input class="form_campo" id="senha" type="text" disabled>
         <i class="fa-solid fa-pen-to-square lapis"></i>
         <br>
       </div>
