Ajustando o tempo e data exibidos no histórico. Adicionando a função de apagar a sessão quando o usuário apertar em 'sair' na tela da partida.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="info_usuario">
 
-            <p><a href="cadastro.php" target="_blank">Cadastre-se</a></p>
+            <p><a href="cadastro.html" target="_blank">Cadastre-se</a></p>
             <p><a href="senha.html" target="_blank">Esqueceu a senha?</a></p>
 
         </div>
