fix: abrir cadastro na mesma pagina

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         <div class="info_usuario">
 
-            <p><a href="cadastro.html" target="_blank">Cadastre-se</a></p>
-            <p><a href="senha.html" target="_blank">Esqueceu a senha?</a></p>
+            <p><a href="cadastro.html">Cadastre-se</a></p>
+            <p><a href="senha.html" >Esqueceu a senha?</a></p>
 
         </div>
 
