--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
         <form action="iniciar.html">
 
             <p>Iniciar sessão</p> <br>
-            <!-- TODO: remover user e senha iniciais. Coloquei aqui só pro professor testar-->
             <i id="campo_login1" class="fa-solid fa-user"> <span class="campo_texto">Username</span></i>
-            <input id="username" class="form_campo" type="text" value="Pietra"> <br>
+            <input id="username" class="form_campo" type="text" value=""> <br>
 
             <i id="campo_login2" class="fa-solid fa-lock"> <span class="campo_texto">Senha</span></i>
             <div class="input-container">
-                <input id="password" class="form_campo" type="password" value="123456">
+                <input id="password" class="form_campo" type="password" value="">
                 <img class="eye-icon togglePassword" src="imagens/verSenha.png" alt="Ver senha">
             </div> <br>
 
