Revert "Realizando os ajustes finais no login e cadastro."
This reverts commit 0be01cd055d8a4dc282eac7a66bf4ec854f16592.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="logo_texto">Campo Minado</p>
         </div>
 
-        <form>
+        <form action="iniciar.html">
 
             <p>Iniciar sessão</p> <br>
             <i id="campo_login1" class="fa-solid fa-user"> <span class="campo_texto">Username</span></i>
